portfolio.html has footer always fixed to the bottom, always visible. StickyFooterTemplate.html has a sticky footer but it needs breakpoint fixes.

--- a/myglobalstyles.css
+++ b/myglobalstyles.css
@@ -22,6 +22,7 @@ body {
 /* I thought this was supposed to make my footer stick >:( */
 main { 
   min-height: calc(100vh - 56px - 61px);
+  flex-shrink: 0!important;
 } 
 
 #about-me-box, #portfolio-box, #contact-box {
@@ -51,6 +52,8 @@ h1 {
 
 /* footer styling */
 footer {
+  display: block;
+  margin-top: auto !important;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -76,17 +79,3 @@ footer p {
   background-color: #63a8a5;
   border-color: #63a8a5;
 }
-
-/*  
-@media only screen and (max-width: 768px) {
-  footer  {
-    flex-direction: row !important;
-    padding-top: 1rem!important;
-    padding-bottom: 1rem!important;
-    margin-left: -12px !important;
-    margin-right: -12px !important;
-    margin-bottom: -50px !important;
-    background-color: #yellow;
-    border-top: 6px solid #yellow;
-  }
-} */
